fix: fixed airflow docker, added db function to update securities table

--- a/backend/notebooks/test_yfinance_pipeline.ipynb
+++ b/backend/notebooks/test_yfinance_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "d8066c26",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "425d2341",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
+   "id": "c4d90cd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: html5lib in /home/caden/Projects/AlgoFlow/backend/venv/lib/python3.12/site-packages (1.1)\n",
+      "Requirement already satisfied: lxml in /home/caden/Projects/AlgoFlow/backend/venv/lib/python3.12/site-packages (6.0.2)\n",
+      "Requirement already satisfied: beautifulsoup4 in /home/caden/Projects/AlgoFlow/backend/venv/lib/python3.12/site-packages (4.14.0)\n",
+      "Requirement already satisfied: six>=1.9 in /home/caden/Projects/AlgoFlow/backend/venv/lib/python3.12/site-packages (from html5lib) (1.17.0)\n",
+      "Requirement already satisfied: webencodings in /home/caden/Projects/AlgoFlow/backend/venv/lib/python3.12/site-packages (from html5lib) (0.5.1)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /home/caden/Projects/AlgoFlow/backend/venv/lib/python3.12/site-packages (from beautifulsoup4) (2.8)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.0 in /home/caden/Projects/AlgoFlow/backend/venv/lib/python3.12/site-packages (from beautifulsoup4) (4.15.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install html5lib lxml beautifulsoup4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "d23db6c2",
    "metadata": {},
    "outputs": [],
@@ -35,6 +59,25 @@
     "\n",
     "# Test database connection on local db\n",
     "client = YfinanceClient(\"postgresql://postgres:postgres@localhost:5432/sec_master_dev\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8a5730b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-28 05:33:01 - yfinance_pipeline._scrape_russell3000_tickers - INFO - [SCRAPER] Fetching Russell 3000 tickers from iShares IWV ETF\n",
+      "2025-09-28 05:33:03 - yfinance_pipeline._scrape_russell3000_tickers - INFO - [SCRAPER] Russell 3000: 2589 tickers found\n"
+     ]
+    }
+   ],
+   "source": [
+    "russ = pipeline._scrape_russell3000_tickers()"
    ]
   },
   {
@@ -1190,6 +1233,14 @@
    "source": [
     "new_tickers"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "311f4471",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
